--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
         
       </div>
     </div>
+    <div id="options">
+      <div>Scroll Speed: <input type="number" id="scrollspeed"></div>
+      <div>Circle Size: <input type="number" id="circlesize"></div>
+      <div>Line Height: <input type="number" id="lineheight"></div>
+      <div>Lane 1 Key: <input type="text" id="lane1key"></div>
+      <div>Lane 2 Key: <input type="text" id="lane2key"></div>
+      <div>Lane 3 Key: <input type="text" id="lane3key"></div>
+      <div>Lane 4 Key: <input type="text" id="lane4key"></div>
+      <div>Circle Color: <input type="text" id="circleR"><input type="text" id="circleG"><input type="text" id="circleB"></div>
+      <div>Outline Color: <input type="text" id="outlineR"><input type="text" id="outlineG"><input type="text" id="outlineB"></div>
+      <!-- <div>Scroll Speed: <input type="number" id="scrollspeed"></div>
+      <div>Scroll Speed: <input type="number" id="scrollspeed"></div> -->
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
